Correct nesting for overflow patch

--- a/ui/src/components/fields/icons.pcss
+++ b/ui/src/components/fields/icons.pcss
@@ -26,8 +26,11 @@
 }
 
 [data-live-edit="true"] {
-	max-height: none;
-	overflow: visible;
+
+	.container {
+		max-height: none;
+		overflow: visible;
+	}
 }
 
 .search {
